--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -141,7 +141,7 @@
 				<div class="action-element" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.disengage}}" style="background-image: url(modules/enhancedcombathud/icons/journey.svg)">
 					<span class="action-element-title">{{hudData.other.specialItemsNames.disengage}}</span>
 				</div>
-				<div class="action-element" style="background-image: url(modules/enhancedcombathud/icons/armor-upgrade.svg)">
+				<div class="action-element" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.dodge}}" style="background-image: url(modules/enhancedcombathud/icons/armor-upgrade.svg)">
 					<span class="action-element-title">{{hudData.other.specialItemsNames.dodge}}</span>
 				</div>
 			</div>
