--- a/styles/Tooltip.css
+++ b/styles/Tooltip.css
@@ -10,7 +10,7 @@
     text-align:left;
     color: var(--ech-fore-color);
     left: var(--mouse-x);
-    bottom: var(--mouse-y);
+    top: var(--mouse-y);
     backdrop-filter: blur(6px);
     background-color: rgb(0 0 0 / 30%);
     border: 1px solid var(--ech-border-color);
@@ -18,4 +18,5 @@
     justify-content: center;
     margin-right: -75px;
     padding: 1rem 0.5rem;
+    z-index: 10000;
 }
