--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -26,7 +26,7 @@
 			<span data-ac-value="{{hudData.actor.data.data.attributes.ac.value}}" style="font-size: 1.5rem;"></span>
 		</div>
 		<div class="portrait-stat-block portrait-stat-block-button" onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);">
-			Inventory
+			{{hudData.settings.localize.inv}}
 		</div>
 		<div class="portrait-stat-block player-details">
 			<span class="player-name">{{hudData.actor.data.name}}</span>
