--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -133,7 +133,7 @@
 			</div>
 			{{/each}}
 		</div>
-		<div class="actions-container has-actions" data-actionbartype="actions" data-title="{{{hudData.settings.localize.mainactions}}">
+		<div class="actions-container has-actions" data-actionbartype="actions" data-title="{{hudData.settings.localize.mainactions}}">
 			<div class="action-element primary-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.setp.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
 				<span class="action-element-title">{{hudData.setp.active.primary.data.name}}</span>
 			</div>
