--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -27,21 +27,21 @@
     border: 1px solid var(--ech-border-color);
     color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    font-size: 1.25rem;
     justify-content: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    margin-left: calc(-1rem - 1px);
+    margin-top: -0.5rem;
     padding: 1rem 0.5rem;
-    width: 100px;
-}
-.portrait-stat-block > span {
-    padding: 0.2rem 0rem;
+    width: 150px;
 }
 .portrait-stat-block [data-hp-value]:after {
     color: rgb(90, 180, 150);
     content: attr(data-hp-value);
 }
 .portrait-stat-block [data-hp-max]:after {
-    content: "of " attr(data-hp-max) " HP";
+    content: attr(data-hp-max);
 }
 .portrait-stat-block [data-ac-value]:after {
     color: rgb(90, 190, 245);
@@ -54,9 +54,12 @@
     backdrop-filter: blur(0px);
     border-width: 0px;
     bottom: 0px;
+    display: flex;
+    flex-direction: column;
     font-size: 1.5rem;
     left: 0px;
     margin-bottom: 0px;
+    margin-left: 0rem;
     margin-top: auto;
     padding: 1rem;
     position: absolute;
@@ -69,6 +72,69 @@
     text-overflow: ellipsis;
     width: 100%;
     white-space: nowrap;
+}
+
+.extended-combat-hud .ability-menu {
+    bottom: 374px;
+    backdrop-filter: blur(6px);
+    background-color: rgb(0 0 0 / 50%);
+    border: 1px solid var(--ech-border-color);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    left: 75px;
+    overflow-y: auto;
+    max-height: calc(1080px - 375px - 100px - 1rem);
+    position: absolute;
+    width: 300px;
+
+    pointer-events: all;
+}
+.extended-combat-hud .ability-menu ul {
+    font-size: 1rem;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+.extended-combat-hud .ability-menu ul > li {
+    border-top: 1px solid var(--ech-border-color);
+    color: rgb(255 255 255);
+    display: flex;
+    padding: 0.75rem;
+}
+.extended-combat-hud .ability-menu ul > li:first-child {
+    border-top-width: 0px;
+}
+
+.extended-combat-hud .ability-menu ul > li:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-style: normal;
+    text-rendering: auto;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 1;
+
+    content: "\f111"
+}
+.extended-combat-hud .ability-menu ul > li.proficiency-is-1:before {
+    content: "\f042";
+    font-weight: 900;
+}
+.extended-combat-hud .ability-menu ul > li.proficiency-is-2:before {
+    content: "\f00c";
+    font-weight: 900;
+}
+.extended-combat-hud .ability-menu ul > li.proficiency-is-4:before {
+    content: "\f560";
+    font-weight: 900;
+}
+.extended-combat-hud .ability-menu ul > li .ability-code,
+.extended-combat-hud .ability-menu ul > li .ability-passive {
+    opacity: 0.6;
+    padding: 0rem 0.5rem;
+    text-transform: uppercase;
 }
 
 .weapon-sets {
