--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -40,7 +40,7 @@
 				</span>
 		</div>
 	</div>
-	<div class="movement-hud" draggable="true" >
+	<div class="movement-hud">
 		<div class="movement-spaces">
 			<span class="movement-space"></span>
 			<span class="movement-space"></span>
