Saves / Skills / Tools
-- Config.js --
Updated Saves/Skills/Tools to be a generic function

-- Extended Combat Hud --
Mapped Saves/Skills/Tools to be similar format for for Quick Rolls

--- a/styles/ECH.css
+++ b/styles/ECH.css
@@ -14,7 +14,7 @@
   	--ech-portrait-size: cover;
 }
 
-@keyframes extendedCombatHUDLoadAnimation {
+/*@keyframes extendedCombatHUDLoadAnimation {
   from {
     bottom: -100%;
     opacity: 0;
@@ -23,7 +23,7 @@
     bottom: 15px;
     opacity: 1;
   }
-}
+}*/
 
 .extended-combat-hud {
   animation: extendedCombatHUDLoadAnimation 0.3s ease-in 1;
