--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -1,22 +1,19 @@
 /*CHARACTER PORTRAIT CONTAINER*/
 .portrait-hud {
-    align-items: start;
+    align-items: flex-end;
     background: var(--ech-color) center top no-repeat;
     background-size: var(--ech-portrait-size);
     border: 1px solid var(--ech-border-color);
     backdrop-filter: blur(6px);
     display: flex;
-    flex-direction: column;
-
+    flex-direction: row;
+    justify-content: space-around;
     margin-right: 115px;
-
     min-height: 375px;
     min-width: 375px;
-
     padding: 1rem;
     position: relative;
     transition: all 0.3s ease-in-out;
-    
     pointer-events: all;
 }
 
@@ -29,15 +26,14 @@
     display: flex;
     flex-direction: row;
     font-size: 1.25rem;
+    font-weight: 900;
     justify-content: center;
-    margin-bottom: 1rem;
-    margin-left: calc(-1rem - 1px);
-    margin-top: -0.5rem;
-    padding: 1rem 0.5rem;
-    width: 150px;
+    margin-bottom: calc(-1rem - 1px);
+    padding: 0.75rem 1rem;
+    text-shadow: 0 0 10px rgba(0 0 0 / 0.7);
 }
 .portrait-stat-block [data-hp-value]:after {
-    color: rgb(90, 180, 150);
+    color: rgb(0 255 170);
     content: attr(data-hp-value);
 }
 .portrait-stat-block [data-hp-max]:after {
@@ -50,10 +46,9 @@
 .portrait-stat-block.player-details {
     align-items: flex-start;
     background-color: rgba(0 0 0 / 0.1);
-    background: linear-gradient(0deg, rgba(65,75,85,0.9) 0%, rgba(70,80,90,0.8) 50%, rgba(75,85,95,0) 100%);
-    backdrop-filter: blur(0px);
+    background: linear-gradient(180deg, rgba(65,75,85,0.9) 0%, rgba(70,80,90,0.8) 50%, rgba(75,85,95,0) 100%);
     border-width: 0px;
-    bottom: 0px;
+    backdrop-filter: none;
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
@@ -64,6 +59,7 @@
     padding: 1rem;
     position: absolute;
     text-shadow: 0 0 black;
+    top: 0px;
     width: 100%;
 }
 .portrait-stat-block.player-details .player-detail {
@@ -80,7 +76,6 @@
     border-top-right-radius: 3px;
     font-size: 13px;
     left: 0px;
-    max-height: calc(1080px - (375px - 100px - 1rem));
     position: absolute;
     width: 375px;
     pointer-events: all;
@@ -102,10 +97,12 @@
     font-size: 1rem;
     list-style: none;
     margin: 0px;
-    max-height: calc(1080px - (375px - 100px - 1rem));
+    height: 100%;
+    max-height: 0px;
     overflow-y: auto;
     padding: 0px;
     opacity: 0.99;
+    transition: all 0.3s ease-in-out;
 }
 .ability-menu ul > li {
     border-top: 1px solid var(--ech-border-color);
@@ -116,7 +113,7 @@
 .ability-menu ul > li:first-child {
     border-top-width: 0px;
 }
-.ability-menu ul > li.skill-title {
+.ability-menu ul > li.ability-title {
     font-weight: 900;
     padding-left: 1.3rem;
     text-transform: uppercase;
@@ -173,15 +170,54 @@
 }
 .ability-menu ul > li .ability-name:hover {
     cursor: pointer;
-    /*text-shadow: 0 0 10px var(--ech-fore-color);*/
     filter: brightness(150%);
+}
+.ability-menu ul > li.is-save .ability-code,
+.ability-menu ul > li.is-save .ability-passive {
+    display: none;
+}
+.ability-menu ul > li.is-save .ability-name {
+    padding-left: 1rem;
+}
+.ability-menu ul > li.is-save .ability-modifier {
+    padding-right: 1rem;
+}
+
+.ech-show-ability-menu .ability-menu ul:first-child {
+    max-height: calc(100vh - (375px + 100px + 1rem));
+}
+.ability-menu ul.ability-toggle {
+    max-height: 100%;
+}
+.ability-menu ul.ability-toggle li {
+    border-top: 1px solid var(--ech-border-color);
+    cursor: pointer;
+}
+.ability-menu ul.ability-toggle li:after {
+    content: "\f13a";
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    font-family: "Font Awesome 5 Free";
+    line-height: 1;
+    font-weight: 900;
+    position: absolute;
+    right: 15px;
+    transform: rotate(180deg);
+    transition: all 0.3s ease-in-out;
+}
+.ech-show-ability-menu .ability-menu ul.ability-toggle li:after {
+    transform: rotate(0deg);
 }
 
 .weapon-sets {
     display: flex;
     flex-direction: row;
     position: absolute;
-    top: calc((-50px - 1rem));
+    top: calc((-50px - 37px - 1rem));
 }
 
 .weapon-set {
