--- a/styles/ECH.css
+++ b/styles/ECH.css
@@ -8,6 +8,7 @@
     --ech-color-free-action: rgba(59 88 117 / 90%);
     --ech-color-reaction: rgb(117 59 59 / 90%);
     --ech-color-end-turn: rgba(55 75 60 / 90%);
+    --ech-color-tooltip: rgba(90 120 150 / 70%);
 	  /* BORDER COLORS */  
   	--ech-border-color: rgb(117, 127, 137);
 	  /* SETTINGS */
