--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -2,16 +2,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<div class="weapon-sets">
 		<div class="weapon-set active" data-type="switchWeapons" data-value="set1">
-			<div class="set set-primary" style="background-image: url({{hudData.sets.set1.primary.data.img}})"></div>
-			<div class="set set-secondary" style="background-image: url({{hudData.sets.set1.secondary.data.img}})"></div>
+			<div class="set set-primary" draggable="true" data-set="set1p" style="background-image: url({{hudData.sets.set1.primary.data.img}})"></div>
+			<div class="set set-secondary" draggable="true" data-set="set1s" style="background-image: url({{hudData.sets.set1.secondary.data.img}})"></div>
 		</div>
 		<div class="weapon-set" data-type="switchWeapons" data-value="set2">
-			<div class="set set-primary" style="background-image: url({{hudData.sets.set2.primary.data.img}})"></div>
-			<div class="set set-secondary" style="background-image: url({{hudData.sets.set2.secondary.data.img}})"></div>
+			<div class="set set-primary" draggable="true" data-set="set2p" style="background-image: url({{hudData.sets.set2.primary.data.img}})"></div>
+			<div class="set set-secondary" draggable="true" data-set="set2s" style="background-image: url({{hudData.sets.set2.secondary.data.img}})"></div>
 		</div>
 		<div class="weapon-set" data-type="switchWeapons" data-value="set3">
-			<div class="set set-primary" style="background-image: url({{hudData.sets.set3.primary.data.img}})"></div>
-			<div class="set set-secondary" style="background-image: url({{hudData.sets.set3.secondary.data.img}})"></div>
+			<div class="set set-primary" draggable="true" data-set="set3p" style="background-image: url({{hudData.sets.set3.primary.data.img}})"></div>
+			<div class="set set-secondary" draggable="true" data-set="set3s" style="background-image: url({{hudData.sets.set3.secondary.data.img}})"></div>
 		</div>
 	</div>
 	<div class="ability-menu">
