--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -21,7 +21,7 @@
 			{{{generateAbilities "tools"}}}
 		</ul>
 		<ul class="ability-toggle">
-			<li class="ability ability-title">Saves / Skills / Tools</li>
+			<li class="ability ability-title">{{hudData.settings.localize.saves}} / {{hudData.settings.localize.skills}} / {{hudData.settings.localize.tools}}</li>
 		</ul>
 	</div>
 	<div class="portrait-hud" style="background-image: url({{hudData.actor.data.img}});">
