--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -34,7 +34,7 @@
 		<div class="portrait-stat-block">
 			<span>AC</span>&nbsp;<span data-ac-value="{{hudData.actor.data.data.attributes.ac.value}}"></span>
 		</div>
-		<div class="portrait-stat-block portrait-stat-block-button" onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);">
+		<div class="portrait-stat-block portrait-stat-block-button" style="background-image: url(modules/enhancedcombathud/icons/backpack.svg);"onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);">
 			{{hudData.settings.localize.inv}}
 		</div>
 		<div class="portrait-stat-block player-details">
