--- a/styles/ECH.css
+++ b/styles/ECH.css
@@ -42,23 +42,6 @@
   will-change: transform;
 }
 
-.ech-close {
-  backdrop-filter: blur(6px);
-  background-color: rgb(0 0 0 / 50%);
-  border: 1px solid var(--ech-border-color);
-  color: rgb(255, 255, 255);
-  display: flex;
-  font-size: 2rem;
-  height: 50px;
-  justify-content: center;
-  position: absolute;
-  right: -115px;
-  top: calc((-50px - 1rem));
-  width: 50px;
-  
-  pointer-events: all;
-}
-
 .extended-combat-hud *,
 .extended-combat-hud :before,
 .extended-combat-hud :after {
@@ -74,7 +57,30 @@
     filter:brightness(0.7);
     padding: 5px;
     background-origin: content-box;
+}
 
+.ech-remove-set .portrait-hud:after {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  background-color: rgb(255 28 12 / 60%);
+  content: '\f1f8';
+  height: 100%;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 8rem;
+  color: rgb(255, 255, 255);
 }
 
 .control-tool:hover .ech-swords, .control-tool:focus .ech-swords, .control-tool:active .ech-swords,.active > .ech-swords{
