--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -11,7 +11,6 @@
     margin-right: 115px;
     min-height: 375px;
     min-width: 375px;
-    padding: 1rem;
     position: relative;
     transition: all 0.3s ease-in-out;
     pointer-events: all;
@@ -19,8 +18,6 @@
 
 .portrait-stat-block {
     align-items: center;
-    backdrop-filter: blur(6px);
-    background-color: rgb(0 0 0 / 50%);
     border: 1px solid var(--ech-border-color);
     color: rgb(255, 255, 255);
     display: flex;
@@ -28,9 +25,21 @@
     font-size: 1.25rem;
     font-weight: 900;
     justify-content: center;
-    margin-bottom: calc(-1rem - 1px);
+    margin-bottom: -1px;
     padding: 0.75rem 1rem;
+    position: relative;
     text-shadow: 0 0 10px rgba(0 0 0 / 0.7);
+}
+.portrait-stat-block:not(.player-details):before{
+    backdrop-filter: blur(6px);
+    background-color: rgb(0 0 0 / 50%);
+    content: '';
+    height: 100%;
+    left: 0px;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: -1;
 }
 .portrait-stat-block [data-hp-value]:after {
     color: rgb(0 255 170);
@@ -68,6 +77,64 @@
     text-overflow: ellipsis;
     width: 100%;
     white-space: nowrap;
+}
+.portrait-stat-block-button {
+    background: rgba(0 0 0 / 50%) no-repeat center;
+    background-size: contain;
+    background-origin: content-box;
+    min-width: 60px;
+    padding: 0.5rem;
+    min-height: 51px;
+    cursor: pointer;
+}
+
+.player-buttons {
+    display: flex;
+    font-size: 2rem;
+    height: 50px;
+    justify-content: center;
+    position: absolute;
+    right: -115px;
+    top: calc((-50px - 1rem - 37px));
+}
+
+.player-button {
+  align-items: center;
+  background: no-repeat center;
+  background-origin: content-box;
+  background-size: contain;
+  border: 1px solid var(--ech-border-color);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  display: flex;
+  font-size: 2rem;
+  height: 50px;
+  justify-content: center;
+  padding: 0.5rem;
+  position: relative;
+  width: 50px;
+  
+  pointer-events: all;
+}
+.player-button:before {
+    backdrop-filter: blur(6px);
+    background-color: rgb(0 0 0 / 50%);
+    content: '';
+    height: 100%;
+    left: 0px;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: -1;
+}
+.player-button.ech-close i {
+    margin-top: -0.5rem;
+}
+.player-button:hover:before {
+    backdrop-filter: none;
+}
+.player-button:hover {
+    filter: brightness(250%);
 }
 
 .ability-menu {
@@ -212,6 +279,9 @@
 .ech-show-ability-menu .ability-menu ul.ability-toggle li:after {
     transform: rotate(0deg);
 }
+.ability-menu ul:last-child > li:hover {
+    filter:brightness(150%);
+}
 
 .weapon-sets {
     display: flex;
@@ -229,7 +299,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-right: 15px; 
+    margin-right: 0.75rem; 
 
     pointer-events: all;
 }
