--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="player-buttons">
 			<div class="player-button" onClick="canvas.hud.enhancedcombathud.hudData.actor.rollInitiative({ rerollInitiative: true, createCombatants: true });"><i class="fas fa-dice-d20"></i></div>
-			<div class="player-button" style="background-image: url(modules/enhancedcombathud/icons/backpack.svg);"onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);"></div>
+			<div class="player-button" onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);"><i class="fas fa-suitcase"></i></div>
 			<div class="ech-close player-button" onclick="$(`.control-tool[data-tool='echtoggle']`).trigger('click')"><i class="fas fa-sort-down"></i></div>
 
 		</div>
