--- a/styles/Tooltip.css
+++ b/styles/Tooltip.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 0px 10px rgb(0 0 0);
     color: var(--ech-fore-color);
     display:inline-block;
+    font-family: var(--ech-font-family);
     font-size: 16px;
     height: fit-content;
     max-width: 400px;
@@ -30,6 +31,9 @@
   position: relative;
   text-align: center;
 }
+.ech-tooltip.hide-subtitle .ech-tooltip-header {
+  padding: 1rem 0.5rem;
+}
 .ech-tooltip .ech-tooltip-header h2 {
   border-width: 0px;
 }
@@ -44,6 +48,10 @@
   transform: translate(-50%, -17.5px);
   z-index: 10000;
 }
+.ech-tooltip.hide-subtitle  .ech-tooltip-subtitle {
+  display: none;
+}
+
 .ech-tooltip .ech-tooltip-body {
   backdrop-filter: blur(6px);
   background-color: var(--ech-color-tooltip);
@@ -53,8 +61,11 @@
   padding: 2rem 1rem 1rem;
   text-align: left;
 }
+.ech-tooltip.hide-subtitle .ech-tooltip-body {
+  padding: 1rem 0.5rem;
+}
 .ech-tooltip .ech-tooltip-body .ech-tooltip-description {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   margin-left: -1rem;
   margin-right: -1rem;
   max-height: 200px;
@@ -64,18 +75,30 @@
 .ech-tooltip .ech-tooltip-body .ech-tooltip-details {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 .ech-tooltip .ech-tooltip-body .ech-tooltip-details > div {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 .ech-tooltip .ech-tooltip-body .ech-tooltip-details > div > span {
-  padding: 0.5rem 0rem;
+  padding: 0.25rem 0rem;
+}
+.ech-tooltip .ech-tooltip-body .ech-tooltip-details > div > span:first-child {
+  opacity: 0.6;
+  text-transform: uppercase;
+}
+.ech-tooltip .ech-tooltip-body .ech-tooltip-details > div > span:last-child {
+  font-size: 1.3rem;
 }
 .ech-tooltip .ech-tooltip-body .ech-tooltip-properties {
   margin-top: 1rem;
+}
+.ech-tooltip .ech-tooltip-body .ech-tooltip-properties h3 {
+  opacity: 0.6;
+  text-transform: uppercase;
 }
 .ech-tooltip .ech-tooltip-body .ech-tooltip-properties .ech-tooltip-badge {
   background-color: rgb(80 150 195); 
