--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="ability-menu">
 		<ul>
-			{{{generateAbilities "saves"}}}
+			{{{generateSavingThrows "saves"}}}
 			{{{generateAbilities "skills"}}}
 			{{{generateAbilities "tools"}}}
 		</ul>
